src/objects/ZDocument_DesignLayout__c.object
<CustomObject>
    <fields>
        <fullName>Document_ViewLink_URL_Parameters__c</fullName>
        <label>Document ViewLink URL Parameters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Id</fullName>
                </value>
                <value>
                    <fullName>Org Id</fullName>
                </value>
                <value>
                    <fullName>dbId</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_ViewLink_Name__c</fullName>
        <label>Documents View Link Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_ViewLink_URL__c</fullName>
        <label>Documents View Link URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Suppress_Blank_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not display document set rows if no document received was received for the current document type.</description>
        <label>Suppress Blank Entries</label>
        <type>Checkbox</type>
    </fields>
    <label>ZDocument Design Layout</label>
    <nameField>
        <label>Design Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZDocument Design Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>